Actions
Bug #10794
closedacpippm: NULL pointer errors
Start date:
2019-04-14
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/buf.h:45, from ../../common/sys/devops.h:35, from ../../common/sys/sunddi.h:39, from ../../i86pc/sys/smp_impldefs.h:31, from ../../i86pc/io/ppm/acpisleep.c:29: ../../i86pc/io/ppm/acpisleep.c: In function 'acpi_enter_sleepstate': ../../common/sys/null.h:32:14: error: passing argument 2 of 'AcpiSetFirmwareWakingVector' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../i86pc/io/ppm/acpisleep.c:90:44: note: in expansion of macro 'NULL' if (AcpiSetFirmwareWakingVector(wakephys, NULL) != AE_OK) { ^~~~ In file included from ../../intel/sys/acpi/acpi.h:173:0, from ../../i86pc/io/ppm/acpisleep.c:43: ../../intel/sys/acpi/acpixf.h:1270:1: note: expected 'ACPI_PHYSICAL_ADDRESS {aka long unsigned int}' but argument is of type 'void *' AcpiSetFirmwareWakingVector ( ^ ../../intel/sys/acpi/acpixf.h:204:5: note: in definition of macro 'ACPI_EXTERNAL_RETURN_STATUS' Prototype; ^~~~~~~~~ ../../intel/sys/acpi/acpixf.h:1268:1: note: in expansion of macro 'ACPI_HW_DEPENDENT_RETURN_STATUS' ACPI_HW_DEPENDENT_RETURN_STATUS ( ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0605ac6144f41502681d3c1c7607950a281228de
commit 0605ac6144f41502681d3c1c7607950a281228de Author: Toomas Soome <tsoome@me.com> Date: 2019-04-25T15:17:35.000Z 10794 acpippm: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions